gitignore 수정 and 코드 수정
피드백 반영하여 gitignore와 orm_get_dicom 파일 수정

--- a/Task1/.gitignore
+++ b/Task1/.gitignore
@@ -8,7 +8,14 @@
 **[Bb]uild/
 **[Bb]uilds/
 **[Ll]ogs/
+
+############ 추가 ############
 **[Uu]ser[Ss]ettings/
+**[Pp]roject[Ss]ettings/
+**[Pp]ackages/
+**[Aa]ssets/NuGet/
+**[Aa]ssets/Packages/
+
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
