--- a/Task1/.gitignore
+++ b/Task1/.gitignore
@@ -1,28 +1,21 @@
 # This .gitignore file should be placed at the root of your Unity project directory
 #
-# Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
+# Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-**[Ll]ibrary/
-**[Tt]emp/
-**[Oo]bj/
-**[Bb]uild/
-**[Bb]uilds/
-**[Ll]ogs/
-
-############ 추가 ############
-**[Uu]ser[Ss]ettings/
-**[Pp]roject[Ss]ettings/
-**[Pp]ackages/
-**[Aa]ssets/NuGet/
-**[Aa]ssets/Packages/
-
+/[Ll]ibrary/
+/[Tt]emp/
+/[Oo]bj/
+/[Bb]uild/
+/[Bb]uilds/
+/[Ll]ogs/
+/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
 
-# Recordings can get excessive in size
-/[Rr]ecordings/
+# Asset meta data should only be ignored when the corresponding asset is also ignored
+!/[Aa]ssets/**/*.meta
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
@@ -66,7 +59,6 @@ sysinfo.txt
 *.apk
 *.aab
 *.unitypackage
-*.app
 
 # Crashlytics generated file
 crashlytics-build.properties
@@ -77,3 +69,22 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+/[Aa]ssets/[Tt]ext[Mm]esh Pro/
+.vsconfig
+.vscode
+
+# packages from nuget package manager
+Assets/Packages
+Assets/Packages.meta
+
+# https://kumas-nu.github.io/NuGet-importer-for-Unity/documentation/usage.html
+# NuGet importer
+/[Aa]ssets/[Pp]ackages.meta
+/[Aa]ssets/[Pp]ackages/
+
+/[Nn]u[Gg]et/
+
+/[Pp]ackages/*/
+
+# mac os meta file
+.DS_Store
