Packages for Project
필요 패키지와 gitignore 수정

--- a/Task1/.gitignore
+++ b/Task1/.gitignore
@@ -11,11 +11,7 @@
 
 ############ 추가 ############
 **[Uu]ser[Ss]ettings/
-**[Pp]roject[Ss]ettings/
-**[Pp]ackages/
-**[Aa]ssets/NuGet/
-**[Aa]ssets/Packages/
-
+**.vscode/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
