--- a/Task1/.gitignore
+++ b/Task1/.gitignore
@@ -14,10 +14,10 @@
 .vscode/
 /[Aa]ssets/[Pp]ackages/
 /[Aa]ssets/[Pp]ackages.meta
-/Assets/NuGet/*
-# Editor 파일은 NuGet 설치 위해 제외
-# Editor 파일 제외하고 모두 삭제
-!/Assets/NuGet/Editor/ 
+/Assets/NuGet/
+/Assets/NuGet.config
+/Assets/NuGet.config.meta
+/Assets/NuGet.meta
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
